feat: add `warning` property to API responses; handle uninitialised datasets; handle empty API responses
